package chp1.duckExample.behavior;

public interface FlyBehavior {
    public void fly();
    
}
