package chp1.duckExample.behavior;

public interface QuackBehavior {
    public void quack();
    
}
