package chp1.duckExample.behavior.fly;

import chp1.duckExample.behavior.FlyBehavior;

public class FlyNoWay implements FlyBehavior{
    public void fly(){
        System.out.println("I can't flay");
    }
    
}
