package chp1.duckExample.behavior.fly;

import chp1.duckExample.behavior.FlyBehavior;

public class FlyWithWings implements FlyBehavior {
    public void fly(){
        System.out.println("I'm flying!!");
    }
    
}
