package chp1.duckExample.behavior.quack;

import chp1.duckExample.behavior.QuackBehavior;

public class Quack implements QuackBehavior{
    public void quack(){
        System.out.println("Quack");
    }
    
}
