package chp1.duckExample.behavior.quack;

import chp1.duckExample.behavior.QuackBehavior;

public class Squeak implements QuackBehavior {
   public void quack(){
       System.out.println("Squeak");
   } 
}
